fixed alignment in signup.html

--- a/Homepage/homestyle.css
+++ b/Homepage/homestyle.css
@@ -4,12 +4,12 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Rubik', sans-serif;
 }
 
 body {
     padding-top: 0px;
     margin-top: 0px;
-    font-family: 'Poppins', sans-serif;
 }
 
 .image{
